k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-node-app
  labels:
    app: devops-node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-node-app
  template:
    metadata:
      labels:
        app: devops-node-app
    spec:
      containers:
        - name: devops-node-app
          image: zaxira/devops-node-app:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
