k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-node-app
  labels:
    app: devops-node-app
spec:
  selector:
    app: devops-node-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
